[tool.poetry]
name = "blog-backend-gpt"
version = "0.1.0"
description = ""
authors = ["Linghua Zhang <lz101@rice.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
